menu + main + filters + search + store

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "node-mysql": "^0.4.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0",
     "xhr-request": "^1.0.1"
   },
   "devDependencies": {
