--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
+    "react-style": "^0.5.5",
     "redux": "^3.6.0",
     "xhr-request": "^1.0.1"
   },
